fixing check animation overflow issue

--- a/SASS/pages/_restaurants.scss
+++ b/SASS/pages/_restaurants.scss
@@ -109,6 +109,7 @@
 
             &--content {
                 padding-right: 5px;
+                overflow: hidden;
 
                 &--title {
                     margin: 0;
